--- a/gehaktbrood.html
+++ b/gehaktbrood.html
@@ -10,7 +10,7 @@
 	   	<div class="center">
 			<h1>Gehaktbrood</h1>
 			<hr>
-			<p>Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor een buffet.</p>
+			<p>Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor<br> een buffet.</p>
 
 
 			<h2>Ingrediënten</h2>
@@ -37,10 +37,12 @@
 				<li>Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li>
 				<li>Haal de vorm uit de oven. Laat even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood op een schotel.</li>
 			</ol>
-			<p><img src="./assets/images/gehaktbrood.jpg"></p>
+			
+			<img src="./assets/images/gehaktbrood.jpg" alt="gehaktbrood" class="center">
+			
+      <div class="tip"><p><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je de bacon weglaten.</p><div>
 
-			<div class="tip"><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je de bacon weglaten.</div>
-	</div>
+    </div>
 
 </body>
 </html>
