--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta charset="UTF-8">
 	</head>
 		<body>
-			<a target="_blank" href="voorgerecht.html" class="button">• Voorgerecht</a>
-		    <a target="_blank" href="gehaktbrood.html" class="button">• Hoofdgerecht</a>
-		    <a target="_blank" href="nagerecht.html" class="button">• Nagerecht</a>
+			<p><a target="_blank" href="voorgerecht.html" class="button">• Voorgerecht</a></p>
+		    <p><a target="_blank" href="gehaktbrood.html" class="button">• Hoofdgerecht</a></p>
+		    <p><a target="_blank" href="nagerecht.html" class="button">• Nagerecht</a></p>
 		</body>
 </html>
