Final ready to be reviewed

--- a/gehaktbrood.html
+++ b/gehaktbrood.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-	<title>B1W501</title>
+	<title>Gehaktbrood</title>
 	<link rel="stylesheet" type="text/css" href="./assets/style/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<meta charset="UTF-8">
@@ -10,7 +10,7 @@
 	   	<div class="center">
 			<h1>Gehaktbrood</h1>
 			<hr>
-			<p>Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor<br> een buffet.</p>
+			<p class="p1">Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor<br> een buffet.</p>
 
 
 			<h2>Ingrediënten</h2>
@@ -31,16 +31,18 @@
 
 			<h2>Bereidingswijze</h2>
 			<ol>
-				<li>Warm de oven voor op 175 graden Celsius.</li>
-				<li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de knoflook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn.</li>
-				<li>Doe het gehakt, paprika, ui, bacon, peterseli, paneermeel, ei, tomatenpuree, tabasco en peper in een kom. Pers de tenen knoflook erboven uit en kneed goed totdat alle ingrediënten zijn gemengd.</li>
-				<li>Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li>
+				<li>Warm de oven voor op 175 graden Celsius.</li><br>
+				<li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de knoflook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn.</li><br>
+				<li>Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in een kom. Pers de tenen knoflook erboven uit en kneed goed totdat alle ingrediënten zijn gemengd.</li><br>
+				<li>Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li><br>
 				<li>Haal de vorm uit de oven. Laat even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood op een schotel.</li>
 			</ol>
 			
 			<img src="./assets/images/gehaktbrood.jpg" alt="gehaktbrood" class="center">
 			
-      <div class="tip"><p><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je de bacon weglaten.</p><div>
+      <div class="tip"><p><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je de bacon weglaten.</p></div>
+
+      	<a href="voorgerecht.html" class="button">🡄 Vorige</a> <a href="nagerecht.html" class="button">Volgende 🡆</a><br> <a href="index.html" class="button">Homepage 🏠</a>
 
     </div>
 
