--- a/voorgerecht.html
+++ b/voorgerecht.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
-	<title>Voorgerecht</title>
-	<link rel="stylesheet" type="text/css" href="./assets/style/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<meta charset="UTF-8">
-</head>
-	<body>
-	   	<div class="center">
-			<h1>Rode Linzensoep</h1>
-			<hr>
-			<p>Een klassiek Turks recept voor Rode linzensoep oftewel Mercimek Çorbası</p>
+	<head>
+		<title>Rode Linzensoep</title>
+		<link rel="stylesheet" type="text/css" href="./assets/style/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<meta charset="UTF-8">
+	</head>
+		<body>
+		   	<div class="center">
+				<h1>Rode Linzensoep</h1>
+				<hr>
+				<p>Een klassiek Turks recept voor Rode linzensoep oftewel Mercimek Çorbası</p>
 
 
-			<h2>Ingrediënten</h2>
-				<ul>
-					<li>Olie, zout</li>
-					<li>4 theelepels paprikapoeder</li>
-					<li>4 theelepels gemalen komijnzaad</li>
-					<li>Een grote ui</li>
-					<li>Een paar tenen knoflook</li>
-					<li>Bouillonblokjes voor 1 liter (groente- of kruidenbouillon)r</li>
-					<li>175g rode linzen</li>
-					<li>Flinke klont boter</li>
-					<li>Eetlepel salça (of tomatenpuree)</li>
-				</ul>
+				<h2>Ingrediënten</h2>
+					<ul>
+						<li>Olie, zout</li>
+						<li>4 theelepels paprikapoeder</li>
+						<li>4 theelepels gemalen komijnzaad</li>
+						<li>Een grote ui</li>
+						<li>Een paar tenen knoflook</li>
+						<li>Bouillonblokjes voor 1 liter (groente- of kruidenbouillon)</li>
+						<li>175g rode linzen</li>
+						<li>Flinke klont boter</li>
+						<li>Eetlepel salça (of tomatenpuree)</li>
+					</ul>
 
-			<h2>Bereidingswijze</h2>
-			<ol>
-				<li>Fruit de ui met de olie en een beetje zout tot het glazig, gelig is.</li>
-				<li>Doe de knoflook erin en laat het een halve minuut warm worden.</li>
-				<li>Doe er 5 mokken kokend water bij (uit de waterkoker).</li>
-				<li>Dan gooi ik alles erin, de paprikapoeder, de bouillonblokjes, de linzen (gewassen) en eventueel de aardappel(s) en wortel. Dan laat je het op een zacht pitje ongeveer 3 kwartier a een uur koken.</li>
-				<li>Als laatste pak je een steelpannetje, daar doe je het komijnzaadpoeder in en je zet gas vol aan. Als je het komijn begint ruiken, dan doe je de boter erbij. Als de boter gesmolten is de salca erbij en dat laat je even op het gas ongeveer een minuut pruttelen (tot het goed gemengd is).</li>
-				<li>Gooi het bij de rest van de soep en pureer alles met de staafmixer. En dan Afiyet Olsun (eet smakelijk)</li>
-			</ol>
-			
-			<img src="./assets/images/mercimek.jpg" alt="mercimek" class="center">
-			
-      <div class="tip"><p><b>Tip </b>je kan er wat peterselie in doen of een gedroogd pepertje om het pittig te maken!</p><div>
+				<h2>Bereidingswijze</h2>
+				<ol>
+					<li>Fruit de ui met de olie en een beetje zout tot het glazig, gelig is.</li><br>
+					<li>Doe de knoflook erin en laat het een halve minuut warm worden.</li><br>
+					<li>Doe er 5 mokken kokend water bij (uit de waterkoker).</li><br>
+					<li>Dan gooi ik alles erin, de paprikapoeder, de bouillonblokjes, de linzen (gewassen) en eventueel de aardappel(s) en wortel. Dan laat je het op een zacht pitje ongeveer 3 kwartier a een uur koken.</li><br>
+					<li>Als laatste pak je een steelpannetje, daar doe je het komijnzaadpoeder in en je zet gas vol aan. Als je het komijn begint ruiken, dan doe je de boter erbij. Als de boter gesmolten is de salca erbij en dat laat je even op het gas ongeveer een minuut pruttelen (tot het goed gemengd is).</li><br>
+					<li>Gooi het bij de rest van de soep en pureer alles met de staafmixer. En dan Afiyet Olsun (eet smakelijk)</li><br>
+				</ol>
+				
+				<img src="./assets/images/mercimek.jpg" alt="mercimek" class="center">
+				
+	      		<div class="tip"><p><b>Tip </b>je kan er wat peterselie in doen of een gedroogd pepertje om het pittig te maken!</p></div>
 
-    </div>
+	      		<a href="index.html" class="button">Homepage 🏠</a> <a href="gehaktbrood.html" class="button">Volgende 🡆</a>
 
-</body>
+	   		</div>
+
+	</body>
 </html>
