Final ready to be reviewed

--- a/gehaktbrood.html
+++ b/gehaktbrood.html
@@ -31,10 +31,10 @@
 
 				<h2>Bereidingswijze</h2>
 					<ol>
-						<li>Warm de oven voor op 175 graden Celsius.</li><br>
-						<li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de knoflook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn.</li><br>
-						<li>Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in een kom. Pers de tenen knoflook erboven uit en kneed goed totdat alle ingrediënten zijn gemengd.</li><br>
-						<li>Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li><br>
+						<li>Warm de oven voor op 175 graden Celsius.</li>
+						<li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de knoflook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn.</li>
+						<li>Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in een kom. Pers de tenen knoflook erboven uit en kneed goed totdat alle ingrediënten zijn gemengd.</li>
+						<li>Druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li>
 						<li>Haal de vorm uit de oven. Laat even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood op een schotel.</li>
 					</ol>
 				
