--- a/nagerecht.html
+++ b/nagerecht.html
@@ -27,12 +27,12 @@
 
 				<h2>Bereidingswijze</h2>
 				<ol>
-					<li>Hak de pistachenootjes fijn en halveer de abrikoosjes.</li><br>
-					<li>Verhit 250 ml water, suiker, honing, saffraan en kaneel in een pannetje en voeg de abrikoosjes toe.</li><br>
-					<li>Laat de vruchten ongeveer 15 minuten in het pannetje op zacht vuur staan.</li><br>
-					<li>Roer 1 theelepel kaneelpoeder door de yoghurt en verdeel over 4 glazen.</li><br>
-					<li>Serveer de abrikoosjes op de yoghurt en schenk er wat warm sap uit het pannetje over.</li><br>
-					<li>Strooi er als laatste wat pistachenootjes over.</li><br>
+					<li>Hak de pistachenootjes fijn en halveer de abrikoosjes.</li>
+					<li>Verhit 250 ml water, suiker, honing, saffraan en kaneel in een pannetje en voeg de abrikoosjes toe.</li>
+					<li>Laat de vruchten ongeveer 15 minuten in het pannetje op zacht vuur staan.</li>
+					<li>Roer 1 theelepel kaneelpoeder door de yoghurt en verdeel over 4 glazen.</li>
+					<li>Serveer de abrikoosjes op de yoghurt en schenk er wat warm sap uit het pannetje over.</li>
+					<li>Strooi er als laatste wat pistachenootjes over.</li>
 				</ol>
 				
 				<img src="./assets/images/abrikozen.jpg" alt="abrikozen" class="center"><br>
