--- a/voorgerecht.html
+++ b/voorgerecht.html
@@ -28,12 +28,12 @@
 
 				<h2>Bereidingswijze</h2>
 					<ol>
-						<li>Fruit de ui met de olie en een beetje zout tot het glazig, gelig is.</li><br>
-						<li>Doe de knoflook erin en laat het een halve minuut warm worden.</li><br>
-						<li>Doe er 5 mokken kokend water bij (uit de waterkoker).</li><br>
-						<li>Dan gooi ik alles erin, de paprikapoeder, de bouillonblokjes, de linzen (gewassen) en eventueel de aardappel(s) en wortel. Dan laat je het op een zacht pitje ongeveer 3 kwartier a een uur koken.</li><br>
-						<li>Als laatste pak je een steelpannetje, daar doe je het komijnzaadpoeder in en je zet gas vol aan. Als je het komijn begint ruiken, dan doe je de boter erbij. Als de boter gesmolten is de salca erbij en dat laat je even op het gas ongeveer een minuut pruttelen (tot het goed gemengd is).</li><br>
-						<li>Gooi het bij de rest van de soep en pureer alles met de staafmixer. En dan Afiyet Olsun (eet smakelijk)</li><br>
+						<li>Fruit de ui met de olie en een beetje zout tot het glazig, gelig is.</li>
+						<li>Doe de knoflook erin en laat het een halve minuut warm worden.</li>
+						<li>Doe er 5 mokken kokend water bij (uit de waterkoker).</li>
+						<li>Dan gooi ik alles erin, de paprikapoeder, de bouillonblokjes, de linzen (gewassen) en eventueel de aardappel(s) en wortel. Dan laat je het op een zacht pitje ongeveer 3 kwartier a een uur koken.</li>
+						<li>Als laatste pak je een steelpannetje, daar doe je het komijnzaadpoeder in en je zet gas vol aan. Als je het komijn begint ruiken, dan doe je de boter erbij. Als de boter gesmolten is de salca erbij en dat laat je even op het gas ongeveer een minuut pruttelen (tot het goed gemengd is).</li>
+						<li>Gooi het bij de rest van de soep en pureer alles met de staafmixer. En dan Afiyet Olsun (eet smakelijk)</li>
 					</ol>
 				
 				<img src="./assets/images/mercimek.jpg" alt="mercimek" class="center">
